force-app/main/default/objects/ClaimItem/fields/Asset_Risk__c.field-meta.xml
<CustomField>
    <fullName>Asset_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset/ Risk</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Claim Items</relationshipLabel>
    <relationshipName>Claim_Items</relationshipName>
    <type>Lookup</type>
</CustomField>