force-app/main/default/objects/ClaimItem/fields/Aswata_Survey__c.field-meta.xml
<CustomField>
    <fullName>Aswata_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aswata Survey</label>
    <referenceTo>Aswata_Survey__c</referenceTo>
    <relationshipLabel>Claim Items</relationshipLabel>
    <relationshipName>Claim_Items</relationshipName>
    <type>Lookup</type>
</CustomField>