force-app/main/default/objects/ClaimItem/fields/Extent_of_damage__c.field-meta.xml
<CustomField>
    <fullName>Extent_of_damage__c</fullName>
    <label>Extent of damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Extent_of_damage</valueSetName>
    </valueSet>
</CustomField>