force-app/main/default/objects/ClaimItem/fields/Loss_Object__c.field-meta.xml
<CustomField>
    <fullName>Loss_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loss Object</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Claim Items</relationshipLabel>
    <relationshipName>Claim_Items</relationshipName>
    <type>Lookup</type>
</CustomField>