force-app/main/default/objects/ClaimItem/recordTypes/Loss_Object.recordType-meta.xml
<RecordType>
    <fullName>Loss_Object</fullName>
    <active>true</active>
    <label>Loss Object</label>
</RecordType>